--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,241 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Raleway:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap");
 
-
-.header-title 
-
-{
-    
-    background-image: url(../img/img10.jpg);
-    
-
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
-.text-footer 
-
-{
-text-align: center;
-}
+body {
+    font-family: "Raleway", sans-serif;
+    background-color: white;
+    
+  }
+  
+  
+  .container {
+    width: 90%;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 80px 0;
+    max-width: 1200px;
+  }
+  
+  .subtitle {
+      color: black;
+      font-size: 2.5rem;
+      margin-bottom: 35px;
+  }
+  
+  /* header */
+  
+  .hero {
+      height: 100vh;
+      background-image: url('../img/bgplaya.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
+  }
+  
+  .nav {
+      display: flex;
+      justify-content: flex-end;
+      height: 70px;
+      align-items: center;
+      font-weight: 500;
+  
+  }
+  
+  .nav__items {
+      text-decoration: none;
+      margin-right: 20px;
+      padding: 10px 15px;
+      font-weight: inherit;
+      color: black
+  
+  }
+  
+  .hero__container {
+      display: flex;
+      color: black
+  }
+  
+  .hero__texts {
+      width: 80%;
+      margin-bottom: 60px;
+  }
+  
+  .hero__title {
+      font-size: 4.2rem;
+  
+  }
+  
+  .hero__subtitle {
+      font-size: 2rem;
+      font-weight: 280;
+      margin: 3px 0;
+  }
 
   
-
-.footer {
-    width: 100%;
-    text-align: center;
     
-    
-}
-
+  /* presentation */
+  
+  .presentation {
+  
+      text-align: center;
+  
+  }
+  
+  .presentation__picture {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+      object-fit: cover;
+      object-position: top;
+  }
+  
+  .presentation__copy {
+  width: 80%;
+  margin: 0 auto;
+  
+  }
+  
+  /* about */
+  
+  .about {
+      min-height: 400px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      row-gap: 80px;
+      justify-items: center;
+      align-items: center;
+  }
+  
+  .about__img {
+      text-align: center;
+  }
+  
+  .about__picture {
+  max-width: 80%;
+  }
+  
+  .about__paragraph {
+      margin-bottom: 20px;
+      line-height: 1.5;
+      font-weight: 300;
+  
+  }
+  
+  /* projects */
+  
+  .projects {
+      background: #f2f2f2
+  
+  }
+  
+  .projects__grid {
+      display: grid;
+      height: 550px;
+      grid-template-areas: 
+      "img1 img1 img2 img3"
+      "img1 img1 img4 img5";
+      gap: 10px;
+  }
+  
+  .projects__items {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+  }
+  
+  .projects__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      cursor: pointer;
+  }
+  
+  .projects__items:nth-of-type(1) {
+      grid-area: img1;
+  }
+  
+  .projects__items:nth-of-type(2) {
+      grid-area: img2;
+  }
+  
+  .projects__items:nth-of-type(3) {
+      grid-area: img3;
+  }
+  
+  .projects__items:nth-of-type(4) {
+      grid-area: img4;
+  }
+  
+  .projects__items:nth-of-type(5) {
+      grid-area: img5;
+  }
+  
+  .projects__hover {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height:100%;
+      color: white;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      position: absolute;
+        
+  }
+  
+  
+  .projects__icon {
+  margin-top: 10px;
+  font-size: 30px;
+  }
+  
+  /* footer */
+  
+  .footer {
+  background-color: bisque;
+  }
+  
+  .footer__grid {
+      display: grid;
+      grid-template-columns: 3fr 2fr;
+      gap: 20px;
+      align-items: center;
+  }
+  
+  .footer__title {
+      font-weight: 300px;
+      color: white;
+      font-size: 2rem;
+      margin-bottom: 30px;
+      text-align: center;
+  
+  }
+  
+  .footer__social {
+      display: flex;
+      justify-content: space-evenly;
+      
+  }
+  
+  .footer__icon {
+      width: 70px;
+      height: 70px;
+  
+  }
+  
+  /* responsive design */
+  
+  @media screen and (max-width: 800px) {
+      
+  }
 
